# aqua-guardian

./: .env  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  endtoend.sh  identity.pem  test_import.json  testing.sh
contract-interpreter/: Cargo.toml
contract-interpreter/src/: access_agreement.rs  guardian_servitude.rs  lib.rs  main.rs  playground_contract_handler.rs  tls_identity_claim.rs
contract-interpreter/tests/: revision_test.rs
contract-interpreter/tests/test_data/: DAA_SIG_RECEIVER_NO_WIT.json  DAA_SIG_SENDER_NO_WIT.json  DAA_SIG_SENDER_NO_WIT_NO_TERM.json
guardian-api/: Cargo.toml
guardian-api/src/: client.rs  lib.rs  server.rs
guardian-api/tests/: talk.rs
guardian-common/: Cargo.toml  build.rs
guardian-common/src/: lib.rs
guardian-common/src/custom_types/: base64.rs  branch.rs  hash.rs  mod.rs  namespace.rs  page_data.rs  public_key.rs  revision.rs  signature.rs  site_info.rs  timestamp.rs  tx_hash.rs
guardian-common/src/custom_types/revision/: content.rs  metadata.rs  signature.rs  witness.rs
node-eth-lookup/: Cargo.toml  README.md
node-eth-lookup/src/: lib.rs  main.rs
node-eth-lookup/src/constants/: mod.rs
node-eth-lookup/src/providers/: mod.rs
node-eth-lookup/tests/: crate_tests.rs
pkc-api/: Cargo.toml
pkc-api/src/: error.rs  lib.rs  storage.rs
pkc-api/src/da/: get_branch.rs  get_hash_chain_info.rs  get_page_all_revs.rs  get_page_last_rev.rs  get_recent_changes.rs  get_revision.rs  import.rs  mod.rs  special_export.rs  special_import.rs  verify_page.rs
pkc-api/src/mw/: allpages.rs  mod.rs  recent_changes.rs
siwe-oidc-auth/: Cargo.toml
siwe-oidc-auth/src/: lib.rs
siwe-oidc-auth/tests/: siwe-oidc-test.rs
src/: certificate_generation.rs  contract_generation.rs  lib.rs  main.rs
verifier/: Cargo.toml
verifier/src/: bin.rs  lib.rs
verifier/src/sa/: mod.rs
verifier/src/v1_1/: mod.rs  signature.rs  verification.rs  witness.rs
verifier/src/v1_1/tests/: main_page.json  mod.rs  signature.json  simple.json  testing_page.json
verifier/src/v1_1/tests/bad_test_data/: amogus.json  mism_content.json  mism_meta.json  mism_prev_rev.json  mism_public.json  mism_signature.json  mism_veri.json
verifier/src/v1_2/: mod.rs
verifier/src/v1_2/tests/: mod.rs  testing_rev.json  testing_wit.json
