[package]
name = "guardian-api"
version = "0.1.0"
edition = "2021"

[dependencies]
guardian-common.workspace = true
http = "1.1.0"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.5", features = ["server", "server-auto"] }
parking_lot = "0.12.3"
reqwest.workspace = true
rustls.workspace = true
rustls-webpki = "0.102.4"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
thiserror.workspace = true
tokio.workspace = true
tokio-rustls = { version = "0.26.0", features = ["ring"], default-features = false }
url.workspace = true

rcgen.workspace = true
bimap = "0.6.3"

http-body-util = "0.1.1"
pkc-api.workspace = true
