[package]
name = "guardian-common"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3.workspace = true
chrono.workspace = true
# tonic.workspace = true
# prost.workspace = true
# prost-types.workspace = true
hex.workspace = true
libsecp256k1.workspace = true
http-body = "1.0.0"
serde.workspace = true
base64 = "0.22.1"
serde_json.workspace = true
ethaddr.workspace = true
thiserror.workspace = true
rand.workspace = true


[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
# tonic-build.workspace = true