[package]
name = "node-eth-lookup"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for looking up Ethereum transactions containing witness data"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["ethereum", "blockchain", "infura", "alchemy"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
ethereum-types = "0.14.1"

[dev-dependencies]
tokio = { version = "1.18.0", features = ["full"] }

[[bin]]
name = "aqua_eth_lookup"
path = "src/main.rs"
