[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
flagset = { version = "0.4.5", features = ["serde"] }
guardian-common.workspace = true
libsecp256k1.workspace = true
serde.workspace = true
jsonschema = "0.18.1"
serde_json = "1.0.127"


[dev-dependencies]
serde_json.workspace = true
pkc-api.workspace = true
